Stop Hide link overlapping text

--- a/app/assets/stylesheets/govuk_publishing_components/components/_cookie-banner.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_cookie-banner.scss
@@ -40,10 +40,6 @@ $govuk-cookie-banner-text-green: #00823b;
   padding-right: govuk-spacing(4);
   padding-bottom: govuk-spacing(2);
   color: $govuk-cookie-banner-text-green;
-
-  @include govuk-media-query($from: desktop) {
-    padding-bottom: 0;
-  }
 }
 
 .gem-c-cookie-banner__buttons {
@@ -89,13 +85,17 @@ $govuk-cookie-banner-text-green: #00823b;
 .gem-c-cookie-banner__hide-button {
   display: block;
 
-  @include govuk-media-query($from: tablet) {
+  @include govuk-media-query($from: desktop) {
     display: inline-block;
   }
 }
 
 .gem-c-cookie-banner__confirmation-message {
   margin-right: govuk-spacing(4);
+
+  @include govuk-media-query($from: desktop) {
+    max-width: 90%;
+  }
 }
 
 .gem-c-cookie-banner__hide-button {
@@ -114,10 +114,10 @@ $govuk-cookie-banner-text-green: #00823b;
     cursor: pointer;
   }
 
-  @include govuk-media-query($from: tablet) {
+  @include govuk-media-query($from: desktop) {
     margin-top: govuk-spacing(0);
     position: absolute;
-    right: 0;
+    right: govuk-spacing(1);
   }
 }
 
